# hw11-py-drf

./: .env  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
apps/auth/: urls.py  views.py
apps/auto_parks/: models.py  serializers.py  urls.py  views.py
apps/auto_parks/migrations/: 0001_initial.py  0002_autoparkmodel_user.py
apps/cars/: filters.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/cars/migrations/: 0001_initial.py  0002_carmodel_auto_park.py  0002_carmodel_photo.py  0003_alter_carmodel_brand_alter_carmodel_price.py  0004_alter_carmodel_options_alter_carmodel_brand.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0004_alter_usermodel_is_active.py
backend/apps/auth/: urls.py  views.py
backend/apps/cars/: consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/apps/chat/: consumers.py  models.py
backend/apps/users/: managers.py  serializers.py  urls.py  views.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/configs/extra_conf/: drf_yasg_conf.py
backend/templates/: spam.html
cars/: models.py  serializers.py  views.py
cars/migrations/: 0001_initial.py
client/: asset-manifest.json  index.html
configs/: settings.py  urls.py
configs/extra_conf/: rest_conf.py
core/: pagination.py
core/services/: email_service.py  jwt_service.py  upload_avatar.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  router.js
frontend/src/components/: Car.js  (+3 more)
(+25 files in other folders)
